fix: fix wrong positioning for control button

--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -2,6 +2,7 @@
 	padding: 60px 0 45px;
 	color: $light-text-color;
 	overflow-x: hidden;
+	background-color: $dark-bg-color;
 	.wrapper--right {
 		display: flex;
 	}
